force-app/main/default/objects/SVMXC__Entitlement_History__c/SVMXC__Entitlement_History__c.object-meta.xml
<CustomObject>
    <description>Object that stores complete entitlement history of cases/installed products.</description>
    <label>Service/Maintenance History</label>
    <nameField>
        <displayFormat>EHN-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service/Maintenance History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>