force-app/main/default/objects/SVMXC__Entitlement_History__c/fields/SVMXC__Entitled_By_IB__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Entitled_By_IB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Service Contract product</description>
    <inlineHelpText>Reference to Service Contract product</inlineHelpText>
    <label>Entitled By IB</label>
    <referenceTo>SVMXC__Service_Contract_Products__c</referenceTo>
    <relationshipName>R00N70000001hzdDEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>