force-app/main/default/objects/SVMXC__Entitlement_History__c/fields/SVMXC__Entitled_By_Service__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Entitled_By_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Service Contract Service</description>
    <inlineHelpText>Reference to Service Contract Service</inlineHelpText>
    <label>Entitled By Service</label>
    <referenceTo>SVMXC__Service_Contract_Services__c</referenceTo>
    <relationshipName>R00N70000001hzeXEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>