force-app/main/default/objects/SVMXC__Entitlement_History__c/fields/SVMXC__Service_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Work order entitled by this entitlement event. Not used</description>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Entitlement History</relationshipLabel>
    <relationshipName>Entitlement_History</relationshipName>
    <type>Lookup</type>
</CustomField>